--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,7 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Press Start 2P', cursive;
+        font-family: 'Press 'Start' 2P', cursive;
+      }
+      @keyframes pulse-anim {
+        0% { transform: scale(1); filter: brightness(1); }
+        50% { transform: scale(1.15); filter: brightness(1.5); }
+        100% { transform: scale(1); filter: brightness(1); }
+      }
+      .animate-pulse-update {
+        animation: pulse-anim 0.4s ease-in-out;
+      }
+      button {
+        transition: all 0.2s ease-in-out;
       }
     </style>
   <script type="importmap">
