--- a/index.html
+++ b/index.html
@@ -23,6 +23,38 @@
       button {
         transition: all 0.2s ease-in-out;
       }
+      /* New Animations */
+      @keyframes screen-shake {
+        0% { transform: translate(0, 0) rotate(0deg); }
+        10% { transform: translate(-1px, -2px) rotate(-0.5deg); }
+        20% { transform: translate(-2px, 0px) rotate(0.5deg); }
+        30% { transform: translate(2px, 2px) rotate(0deg); }
+        40% { transform: translate(1px, -1px) rotate(0.5deg); }
+        50% { transform: translate(-1px, 2px) rotate(-0.5deg); }
+        60% { transform: translate(-2px, 1px) rotate(0deg); }
+        70% { transform: translate(2px, 1px) rotate(-0.5deg); }
+        80% { transform: translate(-1px, -1px) rotate(0.5deg); }
+        90% { transform: translate(1px, 2px) rotate(0deg); }
+        100% { transform: translate(0, 0) rotate(0deg); }
+      }
+      .animate-screen-shake {
+        animation: screen-shake 0.3s linear;
+      }
+      @keyframes pickaxe-mine {
+        0% { transform: rotate(10deg); }
+        50% { transform: rotate(-55deg) scale(1.1); }
+        100% { transform: rotate(10deg); }
+      }
+      .animate-pickaxe-mine {
+        animation: pickaxe-mine 0.3s ease-out;
+      }
+      @keyframes fade-in {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .animate-fade-in {
+        animation: fade-in 0.4s ease-out;
+      }
     </style>
   <script type="importmap">
 {
