--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Press 'Start' 2P', cursive;
+        font-family: 'Press Start 2P', cursive;
+        background-color: #090a0f;
+        background-image: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+        min-height: 100vh;
       }
       @keyframes pulse-anim {
         0% { transform: scale(1); filter: brightness(1); }
