feat: Add initial loading screen and UI enhancements
Introduces a new loading screen component to display while the application initializes. This provides a better user experience by masking initial load times.

Additionally, this commit refactors and enhances the visual presentation of the upgrade panels for the pickaxe and auto-miner, making them more visually appealing and interactive. The pulsing animation has also been slightly adjusted for a more refined effect. A settings modal is also prepared for future implementation within the GameScreen.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         min-height: 100vh;
       }
       @keyframes pulse-anim {
-        0% { transform: scale(1); filter: brightness(1); }
-        50% { transform: scale(1.15); filter: brightness(1.5); }
-        100% { transform: scale(1); filter: brightness(1); }
+        0% { transform: scale(1); }
+        50% { transform: scale(1.2); }
+        100% { transform: scale(1); }
       }
       .animate-pulse-update {
-        animation: pulse-anim 0.4s ease-in-out;
+        animation: pulse-anim 0.3s ease-out;
       }
       button {
         transition: all 0.2s ease-in-out;
