--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Battle Legends: Nexus Siege</title>
+    <title>Battle Royale: Survival Grounds</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,14 +12,14 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
-        background-color: #0c132c;
-        background-image: linear-gradient(180deg, #0c132c 0%, #0a1022 50%, #1a2a52 100%);
+        background-color: #1a202c;
+        background-image: linear-gradient(180deg, #0d121c 0%, #0a0e16 50%, #1f283e 100%);
         min-height: 100vh;
       }
       @keyframes pulse-anim {
-        0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255, 215, 0, 0.4); }
-        70% { transform: scale(1.05); box-shadow: 0 0 10px 15px rgba(255, 215, 0, 0); }
-        100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255, 215, 0, 0); }
+        0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.4); }
+        70% { transform: scale(1.05); box-shadow: 0 0 10px 15px rgba(239, 68, 68, 0); }
+        100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(239, 68, 68, 0); }
       }
       .animate-pulse-update {
         animation: pulse-anim 0.5s ease-out;
