--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -72,6 +71,22 @@
       }
       .animate-victory {
         animation: victory-banner 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+      }
+      @keyframes muzzle-flash-anim {
+        0% { box-shadow: inset 0 0 100px 50px rgba(255, 223, 100, 0.7); }
+        100% { box-shadow: inset 0 0 0 0 rgba(255, 223, 100, 0); }
+      }
+      .animate-muzzle-flash {
+        animation: muzzle-flash-anim 0.1s ease-out;
+      }
+
+      @keyframes healing-pulse-anim {
+        0% { box-shadow: inset 0 0 0 0 rgba(74, 222, 128, 0); }
+        50% { box-shadow: inset 0 0 80px 40px rgba(74, 222, 128, 0.4); }
+        100% { box-shadow: inset 0 0 0 0 rgba(74, 222, 128, 0); }
+      }
+      .animate-healing-pulse {
+        animation: healing-pulse-anim 0.8s ease-in-out;
       }
     </style>
   <script type="importmap">
