--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Battle Royale: Survival Grounds</title>
+    <title>eFootball Mobile 25</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,45 +12,19 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
-        background-color: #1a202c;
-        background-image: linear-gradient(180deg, #0d121c 0%, #0a0e16 50%, #1f283e 100%);
+        background-color: #0c0d12;
         min-height: 100vh;
       }
       @keyframes pulse-anim {
-        0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.4); }
-        70% { transform: scale(1.05); box-shadow: 0 0 10px 15px rgba(239, 68, 68, 0); }
-        100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(239, 68, 68, 0); }
+        0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(0, 150, 255, 0.4); }
+        70% { transform: scale(1.05); box-shadow: 0 0 10px 15px rgba(0, 150, 255, 0); }
+        100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(0, 150, 255, 0); }
       }
       .animate-pulse-update {
         animation: pulse-anim 0.5s ease-out;
       }
       button {
         transition: all 0.2s ease-in-out;
-      }
-      /* New Animations */
-      @keyframes screen-shake {
-        0% { transform: translate(0, 0) rotate(0deg); }
-        10% { transform: translate(-1px, -2px) rotate(-0.5deg); }
-        20% { transform: translate(-2px, 0px) rotate(0.5deg); }
-        30% { transform: translate(2px, 2px) rotate(0deg); }
-        40% { transform: translate(1px, -1px) rotate(0.5deg); }
-        50% { transform: translate(-1px, 2px) rotate(-0.5deg); }
-        60% { transform: translate(-2px, 1px) rotate(0deg); }
-        70% { transform: translate(2px, 1px) rotate(-0.5deg); }
-        80% { transform: translate(-1px, -1px) rotate(0.5deg); }
-        90% { transform: translate(1px, 2px) rotate(0deg); }
-        100% { transform: translate(0, 0) rotate(0deg); }
-      }
-      .animate-screen-shake {
-        animation: screen-shake 0.3s linear;
-      }
-      @keyframes attack-anim {
-        0% { transform: scale(1) rotate(5deg); }
-        50% { transform: scale(1.15) rotate(-35deg); }
-        100% { transform: scale(1) rotate(5deg); }
-      }
-      .animate-hero-attack {
-        animation: attack-anim 0.2s ease-out;
       }
       @keyframes fade-in {
         from { opacity: 0; transform: translateY(10px); }
@@ -58,13 +33,6 @@
       .animate-fade-in {
         animation: fade-in 0.4s ease-out;
       }
-      @keyframes level-up-glow {
-        0%, 100% { box-shadow: 0 0 5px 2px #fef08a; }
-        50% { box-shadow: 0 0 20px 8px #fde047; }
-      }
-      .animate-level-up {
-        animation: level-up-glow 1.5s ease-out;
-      }
       @keyframes victory-banner {
         0% { transform: scale(0.5) rotate(-10deg); opacity: 0; }
         100% { transform: scale(1) rotate(0deg); opacity: 1; }
@@ -72,21 +40,8 @@
       .animate-victory {
         animation: victory-banner 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
       }
-      @keyframes muzzle-flash-anim {
-        0% { box-shadow: inset 0 0 100px 50px rgba(255, 223, 100, 0.7); }
-        100% { box-shadow: inset 0 0 0 0 rgba(255, 223, 100, 0); }
-      }
-      .animate-muzzle-flash {
-        animation: muzzle-flash-anim 0.1s ease-out;
-      }
-
-      @keyframes healing-pulse-anim {
-        0% { box-shadow: inset 0 0 0 0 rgba(74, 222, 128, 0); }
-        50% { box-shadow: inset 0 0 80px 40px rgba(74, 222, 128, 0.4); }
-        100% { box-shadow: inset 0 0 0 0 rgba(74, 222, 128, 0); }
-      }
-      .animate-healing-pulse {
-        animation: healing-pulse-anim 0.8s ease-in-out;
+      .player-card-glow {
+        box-shadow: 0 0 15px rgba(100, 200, 255, 0.5), inset 0 0 10px rgba(100, 200, 255, 0.3);
       }
     </style>
   <script type="importmap">
